// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBarRenderer snapshot (T-0009-059) — expressive×health matches snapshot at expressive×health 1`] = `
<View
  accessibilityLabel="Search"
  accessibilityRole="search"
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderColor": "#EFE9DF",
      "borderRadius": 12,
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 36,
      "paddingHorizontal": 8,
    }
  }
  testID="searchbar-container-sb4"
>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#6B5F56",
        "fontSize": 14,
        "marginRight": 4,
      }
    }
  >
    🔍
  </Text>
  <TextInput
    clearButtonMode="never"
    onChangeText={[Function]}
    placeholder="Search"
    placeholderTextColor="#B0A89E"
    returnKeyType="search"
    style={
      {
        "color": "#1A1715",
        "flex": 1,
        "fontSize": 16,
        "lineHeight": 26,
        "padding": 0,
      }
    }
    testID="searchbar-input-sb4"
    value=""
  />
</View>
`;

exports[`SearchBarRenderer snapshot (T-0009-059) — productive×focus matches snapshot at productive×focus 1`] = `
<View
  accessibilityLabel="Search"
  accessibilityRole="search"
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderColor": "#ECEEF1",
      "borderRadius": 12,
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 36,
      "paddingHorizontal": 8,
    }
  }
  testID="searchbar-container-sb4"
>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#5C6470",
        "fontSize": 14,
        "marginRight": 4,
      }
    }
  >
    🔍
  </Text>
  <TextInput
    clearButtonMode="never"
    onChangeText={[Function]}
    placeholder="Search"
    placeholderTextColor="#A2A8B2"
    returnKeyType="search"
    style={
      {
        "color": "#14171A",
        "flex": 1,
        "fontSize": 16,
        "lineHeight": 24,
        "padding": 0,
      }
    }
    testID="searchbar-input-sb4"
    value=""
  />
</View>
`;
